--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -16,7 +16,7 @@
             />
         <SwitchPreferenceCompat
             android:key="@string/preference_key_show_link_previews"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:title="@string/preference_title_show_link_previews"
             android:summary="@string/preference_summary_show_link_previews"
             />
